Refactor to use switch on operations